WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74778
*Command.h files shouldn't be exported to WebKit layer
https://bugs.webkit.org/show_bug.cgi?id=74778
Summary
*Command.h files shouldn't be exported to WebKit layer
Ryosuke Niwa
Reported
2011-12-16 20:43:04 PST
From
https://bugs.webkit.org/show_bug.cgi?id=74490
Comment #36
From Mark Rowe (bdash) 2011-12-16 20:20:42 PST (-) [reply] The following headers are in WebCore.framework/PrivateHeaders and include CompositeEditCommand.h: ApplyBlockElementCommand.h DeleteSelectionCommand.h MoveSelectionCommand.h ReplaceSelectionCommand.h TypingCommand.h Any and all of these will cause similar build failures if used. ...
Comment #40
From Ryosuke Niwa 2011-12-16 20:30:27 PST (-) [reply] Oops, it appears that _insertParagraphSeparatorInQuotedContent is calling TypingCommand::insertParagraphSeparatorInQuotedContent :( I'll have to add CompositeEditCommand.h back to the framework. WebKit layer shouldn't be including any one of these Command files.
Attachments
Remove the dependency
(20.74 KB, patch)
2012-05-01 00:11 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Removed more symbols from WebCore.exp.in
(21.68 KB, patch)
2012-05-01 00:13 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-05-01 00:11:30 PDT
Created
attachment 139592
[details]
Remove the dependency
Ryosuke Niwa
Comment 2
2012-05-01 00:13:55 PDT
Created
attachment 139593
[details]
Removed more symbols from WebCore.exp.in
Ryosuke Niwa
Comment 3
2012-05-01 00:15:14 PDT
Enrica, it seems like you've preemptively exported SimplifyMarkupCommand. Could you wrap it in an Editor class' method so that we don't have to directly expose the command?
Eric Seidel (no email)
Comment 4
2012-05-01 16:00:26 PDT
Comment on
attachment 139593
[details]
Removed more symbols from WebCore.exp.in Yes! Thank you.
Ryosuke Niwa
Comment 5
2012-05-01 16:03:49 PDT
(In reply to
comment #4
)
> (From update of
attachment 139593
[details]
) > Yes! Thank you.
Thanks for the review! Yeah, I'm very happy with removing this dependency. It makes my future refactoring work much easier :)
WebKit Review Bot
Comment 6
2012-05-01 16:36:12 PDT
Comment on
attachment 139593
[details]
Removed more symbols from WebCore.exp.in Clearing flags on attachment: 139593 Committed
r115760
: <
http://trac.webkit.org/changeset/115760
>
WebKit Review Bot
Comment 7
2012-05-01 16:36:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug