*Command.h files shouldn't be exported to WebKit layer https://bugs.webkit.org/show_bug.cgi?id=74778

Reviewed by Eric Seidel.

Source/WebCore:

Remove the dependency on *Command.h files from Mac port's WebKit layer.
Also wrapped the call to TypingCommand::insertParagraphSeparatorInQuotedContent in the Editor class
so that we can just expose Editor's method instead of directly exposing the said static method.

* WebCore.exp.in:
* WebCore.xcodeproj/project.pbxproj:
* editing/Editor.h:
(Editor):
* editing/mac/EditorMac.mm:
(WebCore::Editor::insertParagraphSeparatorInQuotedContent):
(WebCore):

Source/WebKit/chromium:

* src/WebFrameImpl.cpp:
* src/WebViewImpl.cpp:

Source/WebKit/gtk:

* webkit/webkitwebframe.cpp:

Source/WebKit/mac:

* WebView/WebFrame.mm:
(-[WebFrame _insertParagraphSeparatorInQuotedContent]):

Source/WebKit/win:

* WebView.cpp:

Source/WebKit2:

* WebProcess/WebPage/WebPage.cpp:


Canonical link: https://commits.webkit.org/102848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115760 268f45cc-cd09-0410-ab3c-d52691b4dbfc