Source/WebKit/gtk/webkit/webkitwebframe.cpp
@@ -51,7 +51,6 @@
 #include "RenderListItem.h"
 #include "RenderTreeAsText.h"
 #include "RenderView.h"
-#include "ReplaceSelectionCommand.h"
 #include "ScriptController.h"
 #include "SubstituteData.h"
 #include "TextIterator.h"
